--- a/api/Futbol.Api/appsettings.json
+++ b/api/Futbol.Api/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=ep-calm-poetry-adpqicy6-pooler.c-2.us-east-1.aws.neon.tech;Database=neondb;Username=neondb_owner;Password=npg_TiHxNGv3a1hX;Port=5432;SSL Mode=Require;Trust Server Certificate=true"
+  },
+  "Cors": {
+  "AllowedOrigins": [
+    "http://localhost:3000",
+    "https://futbol-saas-posta.vercel.app" 
+  ]
+}
 }
