Convertir migraciones de SQL Server a PostgreSQL
- Convertidas todas las migraciones a tipos de datos PostgreSQL
- Eliminado paquete Microsoft.EntityFrameworkCore.SqlServer
- Actualizado Program.cs para usar UseNpgsql
- Configurado appsettings.Development.json con conexiÃ³n PostgreSQL
- Agregados archivos de documentaciÃ³n y scripts de ayuda

--- a/api/Futbol.Api/appsettings.Development.json
+++ b/api/Futbol.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=DESKTOP-PQDQJ09\\SQLEXPRESS01;Database=FutbolSaaS;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Host=ep-calm-poetry-adpqicy6-pooler.c-2.us-east-1.aws.neon.tech;Database=neondb;Username=neondb_owner;Password=npg_TiHxNGv3a1hX;Port=5432;SSL Mode=Require;Trust Server Certificate=true"
   },
   "Logging": {
     "LogLevel": {
