--- a/api/Futbol.Api/render.yaml
+++ b/api/Futbol.Api/render.yaml
@@ -9,11 +9,20 @@ services:
         value: Production
       - key: ASPNETCORE_URLS
         value: http://0.0.0.0:10000
-      # Agregar estas variables en el dashboard de Render:
-      # - ConnectionStrings__Default
-      # - Jwt__Key
-      # - Jwt__Issuer
-      # - Jwt__Audience
-      # - Jwt__ExpiresMinutes
-      # - Cors__AllowedOrigins__0
+      - key: Jwt__Key
+        value: PRODUCTION_CHANGE_ME_TO_A_SECURE_RANDOM_KEY_AT_LEAST_32_CHARACTERS_LONG
+      - key: Jwt__Issuer
+        value: Futbol.Api
+      - key: Jwt__Audience
+        value: Futbol.Web
+      - key: Jwt__ExpiresMinutes
+        value: "4320"
+      - key: Cors__AllowedOrigins__0
+        value: http://localhost:3000
+      - key: Cors__AllowedOrigins__1
+        value: https://statsfutbolpro.vercel.app
+      - key: Cors__AllowedOrigins__2
+        value: https://futbol-saas-posta.vercel.app
+      - key: ConnectionStrings__DefaultConnection
+        value: Host=ep-calm-poetry-adpqicy6-pooler.c-2.us-east-1.aws.neon.tech;Database=neondb;Username=neondb_owner;Password=npg_TiHxNGv3a1hX;Port=5432;SSL Mode=Require;Trust Server Certificate=true
 
